[package]
name = "pchryss-todo-cli"
version = "0.2.3"
edition = "2024"
author = "Philip Chryssochoos"
description = "Simple CLI todo app"
license = "MIT"
repository = "https://github.com/pchryss/todo-cli-rs"
readme = "README.md"

[[bin]]
name = "pchryss-todo"
path = "src/main.rs"

[dependencies]
colored = "2.0"
dirs = "6.0.0"
env = "1.0.1"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
